--- a/src/app/Login/signin/signIn.component.html
+++ b/src/app/Login/signin/signIn.component.html
@@ -1,21 +1,24 @@
 
-  <form [formGroup]="myForm" >
+  <form [formGroup]="myForm" (ngSubmit)="login()">
    <div class="form-group">
     <label class="control-label" for="email">Email</label>
       <input type="email" class="form-control" [formControl]="myForm.controls.email" id="email" >
-      <span *ngIf="!myForm.controls.email.valid &&  myForm.controls.email.touched">
+      <p class="text-danger" *ngIf="!myForm.controls.email.valid &&  myForm.controls.email.touched">
         L'email n'est pas valide
-      </span>
+      </p>
     </div>
 
     <div class="form-group">
     <label class="control-label">Password</label>
-      <input class="form-control" id="password" [formControl]="myForm.controls.password">
-      <span *ngIf="!myForm.controls.password.valid &&  myForm.controls.password.touched">
+      <input class="form-control" type="password" id="password" [formControl]="myForm.controls.password">
+      <p  class="text-danger" *ngIf="!myForm.controls.password.valid &&  myForm.controls.password.touched">
         Le mot de passe n'est pas valide
-      </span>
+      </p>
     </div>
 
-   <button class="btn btn-success" [disabled]="!myForm.valid">S'authentifier</button>
+   <button class="btn btn-success" type="submit" [disabled]="!myForm.valid">S'authentifier</button>
    <p>Pas encore inscris? <a routerLink="/signup">Créer un compte</a></p>
+
+    <p class="text-danger" *ngIf="userNotExist">L'utilisateur n'existe pas</p>
+
   </form>
