--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,20 @@
-<h1>Home</h1>
+<div class="container-fluid">
+  <div class="row">
+  <h1>Home</h1>
 <button (click)="logout()" class="btn btn-danger">Déconnexion</button>
-<app-calendar></app-calendar>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <app-calendar (onDateChange)=""></app-calendar>
+
+      <button style="margin-top: 1em;">Verrouiller</button>
+    </div>
+
+  <div class="col-md-8">
+  </div>
+      <p *ngIf="">Veuillez selectionner un mois</p>
+  </div>
+
+
+</div>
