--- a/src/app/util/calendar/calendar.component.html
+++ b/src/app/util/calendar/calendar.component.html
@@ -1,10 +1,10 @@
 <div>
-  <button (click)="onPreviousYear()">Previous Year</button>
-  <button (click)="onNextYear()">Next Year</button>
+  <button (click)="previousYear()">Previous Year</button>
+  <button (click)="nextYear()">Next Year</button>
 </div>
 <div>
-  <button (click)="onPreviousMonth()">Previous Month</button>
-  <button (click)="onNextMonth()">Next Month</button>
+  <button (click)="previousMonth()">Previous Month</button>
+  <button (click)="nextMonth()">Next Month</button>
 </div>
 
 <h3>{{selectedMonthLabel}}--{{selectedYear}}</h3>
