--- a/src/app/util/calendar/calendar.component.html
+++ b/src/app/util/calendar/calendar.component.html
@@ -9,9 +9,9 @@
 
 <h3>{{selectedMonthLabel}}--{{selectedYear}}</h3>
 <table>
-  <th *ngFor="let day of calendar.dayLabels">{{day}}</th>
-  <tr *ngFor="let daysRow of tabCalendar; let x=index;" >
-    <td *ngFor="let day of daysRow; let y=index;" (click)="selectBox(x,y)" [ngClass]='checkBox(x,y)?"selected":"normal"'>
+  <th *ngFor="let dayLabel of calendar.dayLabels">{{dayLabel}}</th>
+  <tr *ngFor="let week of tabCalendar; let x=index;" >
+    <td *ngFor="let day of week; let y=index;" (click)="selectBox(x,y)" [ngClass]='checkBox(x,y)?"selected":"normal"'>
       {{day}}
     </td>
   </tr>
