--- a/src/app/util/calendar/calendar.component.html
+++ b/src/app/util/calendar/calendar.component.html
@@ -11,7 +11,7 @@
 <table>
   <th *ngFor="let dayLabel of calendar.dayLabels">{{dayLabel}}</th>
   <tr *ngFor="let week of tabCalendar; let x=index;" >
-    <td *ngFor="let day of week; let y=index;" (click)="selectBox(x,y)" [ngClass]='checkBox(x,y)?"selected":"normal"'>
+    <td *ngFor="let day of week; let y=index;" (click)="selectBox(x,y)" [class]='checkBox(x,y)?"selected":"normal"'>
       {{day}}
     </td>
   </tr>
