add selectAll deselectAll features

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,12 @@
 
           </tbody>
 
-        </table>
+          </table>
+            <div>
+                <button (click)="selectAll()">Selectionner tout</button>
+                <button (click)="deselectAll()">Annuler</button>
+
+            </div>
       </ng-template>
   </div>
 
