--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 <button (click)="logout()" class="btn btn-danger">Déconnexion</button>
   </div>
 
-  <div class="row">
+  <div class="row" style="margin-top: 5em;">
     <div class="col-md-4">
       <app-calendar (onDateChange)="calendarDateChange($event)"></app-calendar>
 
