extract webpack file

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,7 +62,7 @@
           <div>
             <button class="btn btn-success" (click)="selectAll()">Selectionner tout</button>
             <button class="btn btn-danger" (click)="deselectAll()">Annuler</button>
-            <button class="btn btn-warning">Exporter vers PDF</button>
+            <button class="btn btn-warning" (click)="exportToPDF()">Exporter vers PDF</button>
           </div>
       </div>
 
