--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-3">
         <span class="hipster img-fluid rounded"></span>
         <div *ngIf="isAuthenticated()">
-
+            <app-calendar></app-calendar>
         </div>
     </div>
 
@@ -12,8 +12,8 @@
 
         <div [ngSwitch]="isAuthenticated()">
             <div class="alert alert-success" *ngSwitchCase="true">
-                <span *ngIf="account"
-                   > You are logged in as user "{{account.login}}". </span>
+                <span *ngIf="account">
+                    You are logged in as user "{{account.login}}". </span>
 
 
             </div>
