add report to model

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -11,7 +11,6 @@
             <div class="alert alert-success" *ngSwitchCase="true">
                 <span *ngIf="account">
                     You are logged in as user "{{account.login}}". </span>
-
             </div>
 
         <div class="alert alert-warning" *ngSwitchCase="false">
@@ -24,7 +23,13 @@
         </div>
     </div>
 
-    <div id="main_panel">
+    <div id="select_days_panel">
+        <div id="select_days_header">
+        <p>Please select the days you worked this month</p>
+            <div class="text-success">Tip 1: A click means a day</div>
+            <div class="text-success">Tip 2: A double click means half a day</div>
+        </div>
+
         <jhi-calendar (daySelected)="selected($event)" [holidays]="['2018-01-18']" [allDays]="['2018-01-19', '2018-01-23']"></jhi-calendar>
     </div>
 
