--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -24,3 +24,6 @@ only screen and (                min-resolution: 2dppx) {
         background-size: contain;
     }
 }
+#select_days_panel{
+    margin-top: 5em;
+}
