Add report mapper

--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -114,7 +114,7 @@
 
                 <div class="form-group">
                     <label class="form-control-label" for="currentProject">Current Project</label>
-                    <input type="password" class="form-control" id="currentProject" name="currentProject" #currentProjectInput="ngModel" placeholder="Specify the current project you are working on"
+                    <input type="text" class="form-control" id="currentProject" name="currentProject" #currentProjectInput="ngModel" placeholder="Specify the current project you are working on"
                            [(ngModel)]="registerAccount.currentProject.name" minlength=4 maxlength=50 required>
                     <div *ngIf="currentProjectInput.dirty && currentProjectInput.invalid">
                         <small class="form-text text-danger" *ngIf="currentProjectInput.errors.required">
